--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,15 @@
       <version>5.5.2</version> <!-- Check for the latest version -->
     </dependency>
 
-
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>3.2.0</version>
+    </dependency>
+      <dependency>
+          <groupId>org.xmlunit</groupId>
+          <artifactId>xmlunit-core</artifactId>
+      </dependency>
 
 
   </dependencies>
