--- a/pom.xml
+++ b/pom.xml
@@ -7,20 +7,19 @@
   <groupId>org.example</groupId>
   <artifactId>TraderBeta</artifactId>
   <version>1.0-SNAPSHOT</version>
-
   <name>TraderBeta</name>
   <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>17</java.version> <!-- Updated Java version -->
-    <spring.boot.version>2.5.2</spring.boot.version>
+    <spring.boot.version>2.7.4</spring.boot.version> <!-- Spring Boot version -->
   </properties>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.5.2</version> <!-- Consider updating to a version compatible with Java 17 -->
+    <version>2.7.4</version> <!-- Directly specify the Spring Boot version here -->
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -78,21 +77,34 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- In your pom.xml -->
+    <!-- OpenCSV for CSV file handling -->
     <dependency>
       <groupId>com.opencsv</groupId>
       <artifactId>opencsv</artifactId>
       <version>5.5.2</version> <!-- Check for the latest version -->
     </dependency>
 
+    <!-- ModelMapper for object mapping -->
     <dependency>
       <groupId>org.modelmapper</groupId>
       <artifactId>modelmapper</artifactId>
       <version>3.2.0</version>
     </dependency>
+
+    <!-- XMLUnit for XML testing -->
+    <dependency>
+      <groupId>org.xmlunit</groupId>
+      <artifactId>xmlunit-core</artifactId>
+    </dependency>
       <dependency>
-          <groupId>org.xmlunit</groupId>
-          <artifactId>xmlunit-core</artifactId>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-core</artifactId>
+          <version>5.6.11.Final</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-validation</artifactId>
       </dependency>
 
 
@@ -119,7 +131,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-      <!-- Other plugins as needed -->
     </plugins>
   </build>
 </project>
